<resources>

	<!-- Login -->
	<string name = "app_name">Login</string>
	<string name="lbl_forgot_password">Forgot password?</string>
	<string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
	<string name="btn_reset_password">Reset Password</string>
	<string name="hint_email">Email</string>
	<string name="btn_back"><![CDATA[<< Back]]></string>
	<string name="email">Email</string>
	<string name="hint_password">Password</string>
	<string name="action_sign_in_short">Register</string>
	<string name="btn_forgot_password">Forgot your password?</string>
	<string name="btn_link_to_login">Already registered. Login Me!</string>
	<string name="minimum_password">Password too short, enter minimum 6 characters!</string>
	<string name="auth_failed">Authentication failed, check your email and password or sign up</string>

	<!-- Room Database -->
	<string name="action_settings">Settings</string>
	<string name="title_activity_add_note">AddNoteActivity</string>
	<string name = "title">Title</string>
	<string name = "content">Content</string>
	<string name = "save">Save</string>
	<string name = "no_notes_found_let_s_add_some">No Notes Found, Let\'s Add Some!</string>
	<string name = "register_user">Register User</string>
	<string name = "login">Login</string>
	<string name = "password">Password</string>
	<string name = "sign">Sign</string>
	<string name = "not_a_member_get_registered_in">Not a member? Get registered in</string>
	<string name = "kd_copyrights">KD@copyrights</string>
</resources>
